Fix spacing between left and right

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   #inner {
     width: 50vw;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-direction: row;
   }
